chap4/y.output
Grammar

    0 $accept: program $end

    1 program: exp

    2 exp: lvalue
    3    | NIL
    4    | sequence
    5    | no_value
    6    | INT
    7    | STRING
    8    | negation
    9    | function_call
   10    | record_create
   11    | array_create
   12    | assignment
   13    | if_state
   14    | while
   15    | for
   16    | BREAK
   17    | let_exp
   18    | parentheses
   19    | algebra

   20 algebra: exp OR exp
   21        | exp AND exp
   22        | exp EQ exp
   23        | exp NEQ exp
   24        | exp LE exp
   25        | exp LT exp
   26        | exp GT exp
   27        | exp GE exp
   28        | exp PLUS exp
   29        | exp MINUS exp
   30        | exp TIMES exp
   31        | exp DIVIDE exp

   32 lvalue: ID
   33       | lvalue_one

   34 lvalue_one: lvalue_one DOT ID
   35           | lvalue_one LBRACK exp RBRACK
   36           | ID DOT ID
   37           | ID LBRACE exp RBRACK

   38 sequence: LPAREN sequence_one RPAREN

   39 sequence_one: exp sequence_two

   40 sequence_two: SEMICOLON exp sequence_two
   41             | SEMICOLON exp

   42 no_value: LPAREN RPAREN

   43 negation: MINUS exp

   44 function_call: ID LPAREN RPAREN
   45              | ID LPAREN exp function_call_one RPAREN

   46 function_call_one: %empty
   47                  | COMMA exp function_call_one

   48 record_create: ID LBRACE record_create_one RBRACE

   49 record_create_one: %empty
   50                  | ID EQ exp record_create_two

   51 record_create_two: %empty
   52                  | COMMA ID EQ exp record_create_two

   53 array_create: ID LBRACK exp RBRACK OF exp

   54 assignment: lvalue ASSIGN exp

   55 if_state: IF exp THEN exp
   56         | IF exp THEN exp ELSE exp

   57 while: WHILE exp DO exp

   58 for: FOR ID ASSIGN exp TO exp DO exp

   59 let_exp: LET decs IN exp_sequence END

   60 exp_sequence: %empty
   61             | exp_sequence_one

   62 exp_sequence_one: exp SEMICOLON exp_sequence_one
   63                 | exp

   64 decs: dec decs
   65     | %empty

   66 dec: tydec
   67    | vardec
   68    | fundec

   69 tydec: TYPE ID EQ ty

   70 ty: ID
   71   | LBRACE tyfields RBRACE
   72   | ARRAY OF ID

   73 tyfields: %empty
   74         | ID COLON ID tyfields_one

   75 tyfields_one: %empty
   76             | COMMA ID COLON ID tyfields_one

   77 vardec: VAR ID ASSIGN exp
   78       | VAR ID COLON ID ASSIGN exp

   79 fundec: FUNCTION ID LPAREN tyfields RPAREN EQ exp
   80       | FUNCTION ID LPAREN tyfields RPAREN COLON ID EQ exp

   81 parentheses: LPAREN exp RPAREN


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 32 34 36 37 44 45 48 50 52 53 58 69 70 72 74 76 77 78 79 80
STRING (259) 7
INT (260) 6
COMMA (261) 47 52 76
COLON (262) 74 76 78 80
SEMICOLON (263) 40 41 62
LPAREN (264) 38 42 44 45 79 80 81
RPAREN (265) 38 42 44 45 79 80 81
LBRACK (266) 35 53
RBRACK (267) 35 37 53
LBRACE (268) 37 48 71
RBRACE (269) 48 71
DOT (270) 34 36
PLUS (271) 28
MINUS (272) 29 43
TIMES (273) 30
DIVIDE (274) 31
EQ (275) 22 50 52 69 79 80
NEQ (276) 23
LT (277) 25
LE (278) 24
GT (279) 26
GE (280) 27
AND (281) 21
OR (282) 20
ASSIGN (283) 54 58 77 78
ARRAY (284) 72
IF (285) 55 56
THEN (286) 55 56
ELSE (287) 56
WHILE (288) 57
FOR (289) 58
TO (290) 58
DO (291) 57 58
LET (292) 59
IN (293) 59
END (294) 59
OF (295) 53 72
BREAK (296) 16
NIL (297) 3
FUNCTION (298) 79 80
VAR (299) 77 78
TYPE (300) 69
LOWER_THAN_ELSE (301)
UMINUS (302)


Nonterminals, with rules where they appear

$accept (48)
    on left: 0
program (49)
    on left: 1, on right: 0
exp (50)
    on left: 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19, on right:
    1 20 21 22 23 24 25 26 27 28 29 30 31 35 37 39 40 41 43 45 47 50
    52 53 54 55 56 57 58 62 63 77 78 79 80 81
algebra (51)
    on left: 20 21 22 23 24 25 26 27 28 29 30 31, on right: 19
lvalue (52)
    on left: 32 33, on right: 2 54
lvalue_one (53)
    on left: 34 35 36 37, on right: 33 34 35
sequence (54)
    on left: 38, on right: 4
sequence_one (55)
    on left: 39, on right: 38
sequence_two (56)
    on left: 40 41, on right: 39 40
no_value (57)
    on left: 42, on right: 5
negation (58)
    on left: 43, on right: 8
function_call (59)
    on left: 44 45, on right: 9
function_call_one (60)
    on left: 46 47, on right: 45 47
record_create (61)
    on left: 48, on right: 10
record_create_one (62)
    on left: 49 50, on right: 48
record_create_two (63)
    on left: 51 52, on right: 50 52
array_create (64)
    on left: 53, on right: 11
assignment (65)
    on left: 54, on right: 12
if_state (66)
    on left: 55 56, on right: 13
while (67)
    on left: 57, on right: 14
for (68)
    on left: 58, on right: 15
let_exp (69)
    on left: 59, on right: 17
exp_sequence (70)
    on left: 60 61, on right: 59
exp_sequence_one (71)
    on left: 62 63, on right: 61 62
decs (72)
    on left: 64 65, on right: 59 64
dec (73)
    on left: 66 67 68, on right: 64
tydec (74)
    on left: 69, on right: 66
ty (75)
    on left: 70 71 72, on right: 69
tyfields (76)
    on left: 73 74, on right: 71 79 80
tyfields_one (77)
    on left: 75 76, on right: 74 76
vardec (78)
    on left: 77 78, on right: 67
fundec (79)
    on left: 79 80, on right: 68
parentheses (80)
    on left: 81, on right: 18


State 0

    0 $accept: . program $end

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    program        go to state 12
    exp            go to state 13
    algebra        go to state 14
    lvalue         go to state 15
    lvalue_one     go to state 16
    sequence       go to state 17
    no_value       go to state 18
    negation       go to state 19
    function_call  go to state 20
    record_create  go to state 21
    array_create   go to state 22
    assignment     go to state 23
    if_state       go to state 24
    while          go to state 25
    for            go to state 26
    let_exp        go to state 27
    parentheses    go to state 28


State 1

   32 lvalue: ID .
   36 lvalue_one: ID . DOT ID
   37           | ID . LBRACE exp RBRACK
   44 function_call: ID . LPAREN RPAREN
   45              | ID . LPAREN exp function_call_one RPAREN
   48 record_create: ID . LBRACE record_create_one RBRACE
   53 array_create: ID . LBRACK exp RBRACK OF exp

    LPAREN  shift, and go to state 29
    LBRACK  shift, and go to state 30
    LBRACE  shift, and go to state 31
    DOT     shift, and go to state 32

    $default  reduce using rule 32 (lvalue)


State 2

    7 exp: STRING .

    $default  reduce using rule 7 (exp)


State 3

    6 exp: INT .

    $default  reduce using rule 6 (exp)


State 4

   38 sequence: LPAREN . sequence_one RPAREN
   42 no_value: LPAREN . RPAREN
   81 parentheses: LPAREN . exp RPAREN

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    RPAREN  shift, and go to state 33
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp            go to state 34
    algebra        go to state 14
    lvalue         go to state 15
    lvalue_one     go to state 16
    sequence       go to state 17
    sequence_one   go to state 35
    no_value       go to state 18
    negation       go to state 19
    function_call  go to state 20
    record_create  go to state 21
    array_create   go to state 22
    assignment     go to state 23
    if_state       go to state 24
    while          go to state 25
    for            go to state 26
    let_exp        go to state 27
    parentheses    go to state 28


State 5

   43 negation: MINUS . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp            go to state 36
    algebra        go to state 14
    lvalue         go to state 15
    lvalue_one     go to state 16
    sequence       go to state 17
    no_value       go to state 18
    negation       go to state 19
    function_call  go to state 20
    record_create  go to state 21
    array_create   go to state 22
    assignment     go to state 23
    if_state       go to state 24
    while          go to state 25
    for            go to state 26
    let_exp        go to state 27
    parentheses    go to state 28


State 6

   55 if_state: IF . exp THEN exp
   56         | IF . exp THEN exp ELSE exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp            go to state 37
    algebra        go to state 14
    lvalue         go to state 15
    lvalue_one     go to state 16
    sequence       go to state 17
    no_value       go to state 18
    negation       go to state 19
    function_call  go to state 20
    record_create  go to state 21
    array_create   go to state 22
    assignment     go to state 23
    if_state       go to state 24
    while          go to state 25
    for            go to state 26
    let_exp        go to state 27
    parentheses    go to state 28


State 7

   57 while: WHILE . exp DO exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp            go to state 38
    algebra        go to state 14
    lvalue         go to state 15
    lvalue_one     go to state 16
    sequence       go to state 17
    no_value       go to state 18
    negation       go to state 19
    function_call  go to state 20
    record_create  go to state 21
    array_create   go to state 22
    assignment     go to state 23
    if_state       go to state 24
    while          go to state 25
    for            go to state 26
    let_exp        go to state 27
    parentheses    go to state 28


State 8

   58 for: FOR . ID ASSIGN exp TO exp DO exp

    ID  shift, and go to state 39


State 9

   59 let_exp: LET . decs IN exp_sequence END

    FUNCTION  shift, and go to state 40
    VAR       shift, and go to state 41
    TYPE      shift, and go to state 42

    $default  reduce using rule 65 (decs)

    decs    go to state 43
    dec     go to state 44
    tydec   go to state 45
    vardec  go to state 46
    fundec  go to state 47


State 10

   16 exp: BREAK .

    $default  reduce using rule 16 (exp)


State 11

    3 exp: NIL .

    $default  reduce using rule 3 (exp)


State 12

    0 $accept: program . $end

    $end  shift, and go to state 48


State 13

    1 program: exp .
   20 algebra: exp . OR exp
   21        | exp . AND exp
   22        | exp . EQ exp
   23        | exp . NEQ exp
   24        | exp . LE exp
   25        | exp . LT exp
   26        | exp . GT exp
   27        | exp . GE exp
   28        | exp . PLUS exp
   29        | exp . MINUS exp
   30        | exp . TIMES exp
   31        | exp . DIVIDE exp

    PLUS    shift, and go to state 49
    MINUS   shift, and go to state 50
    TIMES   shift, and go to state 51
    DIVIDE  shift, and go to state 52
    EQ      shift, and go to state 53
    NEQ     shift, and go to state 54
    LT      shift, and go to state 55
    LE      shift, and go to state 56
    GT      shift, and go to state 57
    GE      shift, and go to state 58
    AND     shift, and go to state 59
    OR      shift, and go to state 60

    $default  reduce using rule 1 (program)


State 14

   19 exp: algebra .

    $default  reduce using rule 19 (exp)


State 15

    2 exp: lvalue .
   54 assignment: lvalue . ASSIGN exp

    ASSIGN  shift, and go to state 61

    $default  reduce using rule 2 (exp)


State 16

   33 lvalue: lvalue_one .
   34 lvalue_one: lvalue_one . DOT ID
   35           | lvalue_one . LBRACK exp RBRACK

    LBRACK  shift, and go to state 62
    DOT     shift, and go to state 63

    $default  reduce using rule 33 (lvalue)


State 17

    4 exp: sequence .

    $default  reduce using rule 4 (exp)


State 18

    5 exp: no_value .

    $default  reduce using rule 5 (exp)


State 19

    8 exp: negation .

    $default  reduce using rule 8 (exp)


State 20

    9 exp: function_call .

    $default  reduce using rule 9 (exp)


State 21

   10 exp: record_create .

    $default  reduce using rule 10 (exp)


State 22

   11 exp: array_create .

    $default  reduce using rule 11 (exp)


State 23

   12 exp: assignment .

    $default  reduce using rule 12 (exp)


State 24

   13 exp: if_state .

    $default  reduce using rule 13 (exp)


State 25

   14 exp: while .

    $default  reduce using rule 14 (exp)


State 26

   15 exp: for .

    $default  reduce using rule 15 (exp)


State 27

   17 exp: let_exp .

    $default  reduce using rule 17 (exp)


State 28

   18 exp: parentheses .

    $default  reduce using rule 18 (exp)


State 29

   44 function_call: ID LPAREN . RPAREN
   45              | ID LPAREN . exp function_call_one RPAREN

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    RPAREN  shift, and go to state 64
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp            go to state 65
    algebra        go to state 14
    lvalue         go to state 15
    lvalue_one     go to state 16
    sequence       go to state 17
    no_value       go to state 18
    negation       go to state 19
    function_call  go to state 20
    record_create  go to state 21
    array_create   go to state 22
    assignment     go to state 23
    if_state       go to state 24
    while          go to state 25
    for            go to state 26
    let_exp        go to state 27
    parentheses    go to state 28


State 30

   53 array_create: ID LBRACK . exp RBRACK OF exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp            go to state 66
    algebra        go to state 14
    lvalue         go to state 15
    lvalue_one     go to state 16
    sequence       go to state 17
    no_value       go to state 18
    negation       go to state 19
    function_call  go to state 20
    record_create  go to state 21
    array_create   go to state 22
    assignment     go to state 23
    if_state       go to state 24
    while          go to state 25
    for            go to state 26
    let_exp        go to state 27
    parentheses    go to state 28


State 31

   37 lvalue_one: ID LBRACE . exp RBRACK
   48 record_create: ID LBRACE . record_create_one RBRACE

    ID      shift, and go to state 67
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    $default  reduce using rule 49 (record_create_one)

    exp                go to state 68
    algebra            go to state 14
    lvalue             go to state 15
    lvalue_one         go to state 16
    sequence           go to state 17
    no_value           go to state 18
    negation           go to state 19
    function_call      go to state 20
    record_create      go to state 21
    record_create_one  go to state 69
    array_create       go to state 22
    assignment         go to state 23
    if_state           go to state 24
    while              go to state 25
    for                go to state 26
    let_exp            go to state 27
    parentheses        go to state 28


State 32

   36 lvalue_one: ID DOT . ID

    ID  shift, and go to state 70


State 33

   42 no_value: LPAREN RPAREN .

    $default  reduce using rule 42 (no_value)


State 34

   20 algebra: exp . OR exp
   21        | exp . AND exp
   22        | exp . EQ exp
   23        | exp . NEQ exp
   24        | exp . LE exp
   25        | exp . LT exp
   26        | exp . GT exp
   27        | exp . GE exp
   28        | exp . PLUS exp
   29        | exp . MINUS exp
   30        | exp . TIMES exp
   31        | exp . DIVIDE exp
   39 sequence_one: exp . sequence_two
   81 parentheses: LPAREN exp . RPAREN

    SEMICOLON  shift, and go to state 71
    RPAREN     shift, and go to state 72
    PLUS       shift, and go to state 49
    MINUS      shift, and go to state 50
    TIMES      shift, and go to state 51
    DIVIDE     shift, and go to state 52
    EQ         shift, and go to state 53
    NEQ        shift, and go to state 54
    LT         shift, and go to state 55
    LE         shift, and go to state 56
    GT         shift, and go to state 57
    GE         shift, and go to state 58
    AND        shift, and go to state 59
    OR         shift, and go to state 60

    sequence_two  go to state 73


State 35

   38 sequence: LPAREN sequence_one . RPAREN

    RPAREN  shift, and go to state 74


State 36

   20 algebra: exp . OR exp
   21        | exp . AND exp
   22        | exp . EQ exp
   23        | exp . NEQ exp
   24        | exp . LE exp
   25        | exp . LT exp
   26        | exp . GT exp
   27        | exp . GE exp
   28        | exp . PLUS exp
   29        | exp . MINUS exp
   30        | exp . TIMES exp
   31        | exp . DIVIDE exp
   43 negation: MINUS exp .

    $default  reduce using rule 43 (negation)


State 37

   20 algebra: exp . OR exp
   21        | exp . AND exp
   22        | exp . EQ exp
   23        | exp . NEQ exp
   24        | exp . LE exp
   25        | exp . LT exp
   26        | exp . GT exp
   27        | exp . GE exp
   28        | exp . PLUS exp
   29        | exp . MINUS exp
   30        | exp . TIMES exp
   31        | exp . DIVIDE exp
   55 if_state: IF exp . THEN exp
   56         | IF exp . THEN exp ELSE exp

    PLUS    shift, and go to state 49
    MINUS   shift, and go to state 50
    TIMES   shift, and go to state 51
    DIVIDE  shift, and go to state 52
    EQ      shift, and go to state 53
    NEQ     shift, and go to state 54
    LT      shift, and go to state 55
    LE      shift, and go to state 56
    GT      shift, and go to state 57
    GE      shift, and go to state 58
    AND     shift, and go to state 59
    OR      shift, and go to state 60
    THEN    shift, and go to state 75


State 38

   20 algebra: exp . OR exp
   21        | exp . AND exp
   22        | exp . EQ exp
   23        | exp . NEQ exp
   24        | exp . LE exp
   25        | exp . LT exp
   26        | exp . GT exp
   27        | exp . GE exp
   28        | exp . PLUS exp
   29        | exp . MINUS exp
   30        | exp . TIMES exp
   31        | exp . DIVIDE exp
   57 while: WHILE exp . DO exp

    PLUS    shift, and go to state 49
    MINUS   shift, and go to state 50
    TIMES   shift, and go to state 51
    DIVIDE  shift, and go to state 52
    EQ      shift, and go to state 53
    NEQ     shift, and go to state 54
    LT      shift, and go to state 55
    LE      shift, and go to state 56
    GT      shift, and go to state 57
    GE      shift, and go to state 58
    AND     shift, and go to state 59
    OR      shift, and go to state 60
    DO      shift, and go to state 76


State 39

   58 for: FOR ID . ASSIGN exp TO exp DO exp

    ASSIGN  shift, and go to state 77


State 40

   79 fundec: FUNCTION . ID LPAREN tyfields RPAREN EQ exp
   80       | FUNCTION . ID LPAREN tyfields RPAREN COLON ID EQ exp

    ID  shift, and go to state 78


State 41

   77 vardec: VAR . ID ASSIGN exp
   78       | VAR . ID COLON ID ASSIGN exp

    ID  shift, and go to state 79


State 42

   69 tydec: TYPE . ID EQ ty

    ID  shift, and go to state 80


State 43

   59 let_exp: LET decs . IN exp_sequence END

    IN  shift, and go to state 81


State 44

   64 decs: dec . decs

    FUNCTION  shift, and go to state 40
    VAR       shift, and go to state 41
    TYPE      shift, and go to state 42

    $default  reduce using rule 65 (decs)

    decs    go to state 82
    dec     go to state 44
    tydec   go to state 45
    vardec  go to state 46
    fundec  go to state 47


State 45

   66 dec: tydec .

    $default  reduce using rule 66 (dec)


State 46

   67 dec: vardec .

    $default  reduce using rule 67 (dec)


State 47

   68 dec: fundec .

    $default  reduce using rule 68 (dec)


State 48

    0 $accept: program $end .

    $default  accept


State 49

   28 algebra: exp PLUS . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp            go to state 83
    algebra        go to state 14
    lvalue         go to state 15
    lvalue_one     go to state 16
    sequence       go to state 17
    no_value       go to state 18
    negation       go to state 19
    function_call  go to state 20
    record_create  go to state 21
    array_create   go to state 22
    assignment     go to state 23
    if_state       go to state 24
    while          go to state 25
    for            go to state 26
    let_exp        go to state 27
    parentheses    go to state 28


State 50

   29 algebra: exp MINUS . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp            go to state 84
    algebra        go to state 14
    lvalue         go to state 15
    lvalue_one     go to state 16
    sequence       go to state 17
    no_value       go to state 18
    negation       go to state 19
    function_call  go to state 20
    record_create  go to state 21
    array_create   go to state 22
    assignment     go to state 23
    if_state       go to state 24
    while          go to state 25
    for            go to state 26
    let_exp        go to state 27
    parentheses    go to state 28


State 51

   30 algebra: exp TIMES . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp            go to state 85
    algebra        go to state 14
    lvalue         go to state 15
    lvalue_one     go to state 16
    sequence       go to state 17
    no_value       go to state 18
    negation       go to state 19
    function_call  go to state 20
    record_create  go to state 21
    array_create   go to state 22
    assignment     go to state 23
    if_state       go to state 24
    while          go to state 25
    for            go to state 26
    let_exp        go to state 27
    parentheses    go to state 28


State 52

   31 algebra: exp DIVIDE . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11
